pubspec publish none

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,6 +2,7 @@ name: tunaf_country_code
 description: This package base on country_code_picker, A flutter package for showing a country code selector. In addition it gives the possibility to select a list of favorites countries, as well as to search using a simple searchbox  
 version: 0.0.1
 homepage: https://github.com/JackoPham/tunaf_country_code
+publish_to: none
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
